// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppManagementView should disable buttons and display "Installing..." button text when installing app 1`] = `
<div
  className="list-group-item"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="row no-gutters"
  >
    <div
      className="center-span-3-lines col-auto mr-3"
    >
      <div
        className="core-app-icon"
        style={
          Object {
            "background": "#e6f8ff",
            "borderRadius": 7,
            "height": "48px",
            "width": "48px",
          }
        }
      >
        <img
          alt=""
          draggable={false}
          style={
            Object {
              "visibility": "hidden",
            }
          }
        />
      </div>
    </div>
    <div
      className="text-width col"
    >
      <div
        className="list-group-item-heading"
      >
        Foo app
      </div>
      <div
        className="list-group-item-text"
      >
        Foo description
      </div>
      <div
        className="core-app-management-item-footer"
      >
        <span
          className="list-group-item-heading-source-tag"
        >
          local
        </span>
      </div>
    </div>
    <div
      className="center-span-3-lines col-auto ml-auto"
    >
      <div
        className="wide-btns btn-toolbar"
        role="toolbar"
      >
        <button
          className="btn btn-outline-secondary"
          disabled={true}
          onClick={[Function]}
          title="Install Foo app"
          type="button"
        >
          Installing...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should disable buttons and display "Removing..." button text when removing app 1`] = `
<div
  className="list-group-item"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="row no-gutters"
  >
    <div
      className="center-span-3-lines col-auto mr-3"
    >
      <div
        className="core-app-icon"
        style={
          Object {
            "background": "#e6f8ff",
            "borderRadius": 7,
            "height": "48px",
            "width": "48px",
          }
        }
      >
        <img
          alt=""
          draggable={false}
          style={
            Object {
              "visibility": "hidden",
            }
          }
        />
        <div>
          <span
            className="alert-icon-bg"
          />
          <span
            className="mdi mdi-alert"
            title="The app does not specify which nRF Connect version(s) it supports"
          />
        </div>
      </div>
    </div>
    <div
      className="text-width col"
    >
      <div
        className="list-group-item-heading"
      >
        Foo app
      </div>
      <div
        className="list-group-item-text"
      >
        Foo description
      </div>
      <div
        className="core-app-management-item-footer"
      >
        <span
          className="list-group-item-heading-source-tag"
        >
          local
          , v
          1.2.3
        </span>
      </div>
    </div>
    <div
      className="center-span-3-lines col-auto ml-auto"
    >
      <div
        className="wide-btns btn-toolbar"
        role="toolbar"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          title="Open Foo app"
          type="button"
        >
          Open
        </button>
        <div
          className="dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should disable buttons and display "Upgrading..." button text when upgrading app 1`] = `
<div
  className="list-group-item"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="row no-gutters"
  >
    <div
      className="center-span-3-lines col-auto mr-3"
    >
      <div
        className="core-app-icon"
        style={
          Object {
            "background": "#e6f8ff",
            "borderRadius": 7,
            "height": "48px",
            "width": "48px",
          }
        }
      >
        <img
          alt=""
          draggable={false}
          style={
            Object {
              "visibility": "hidden",
            }
          }
        />
        <div>
          <span
            className="alert-icon-bg"
          />
          <span
            className="mdi mdi-alert"
            title="The app does not specify which nRF Connect version(s) it supports"
          />
        </div>
      </div>
    </div>
    <div
      className="text-width col"
    >
      <div
        className="list-group-item-heading"
      >
        Foo app
      </div>
      <div
        className="list-group-item-text"
      >
        Foo description
      </div>
      <div
        className="core-app-management-item-footer"
      >
        <span
          className="list-group-item-heading-source-tag"
        >
          local
          , v
          1.2.3
        </span>
      </div>
    </div>
    <div
      className="center-span-3-lines col-auto ml-auto"
    >
      <div
        className="wide-btns btn-toolbar"
        role="toolbar"
      >
        <button
          className="btn btn-outline-primary"
          disabled={true}
          onClick={[Function]}
          title="Update Foo app"
          type="button"
        >
          Updating...
        </button>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          title="Open Foo app"
          type="button"
        >
          Open
        </button>
        <div
          className="dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppManagementView should render more info links for correctly defined homepage 1`] = `
Array [
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="row no-gutters"
    >
      <div
        className="center-span-3-lines col-auto mr-3"
      >
        <div
          className="core-app-icon"
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </div>
      </div>
      <div
        className="text-width col"
      >
        <div
          className="list-group-item-heading"
        >
          App A
        </div>
        <div
          className="list-group-item-text"
        >
          appA description
        </div>
        <div
          className="core-app-management-item-footer"
        >
          <span
            className="list-group-item-heading-source-tag"
          >
            local
          </span>
        </div>
      </div>
      <div
        className="center-span-3-lines col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App A"
            type="button"
          >
            Install
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="row no-gutters"
    >
      <div
        className="center-span-3-lines col-auto mr-3"
      >
        <div
          className="core-app-icon"
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </div>
      </div>
      <div
        className="text-width col"
      >
        <div
          className="list-group-item-heading"
        >
          App B
        </div>
        <div
          className="list-group-item-text"
        >
          appB description
        </div>
        <div
          className="core-app-management-item-footer"
        >
          <span
            className="list-group-item-heading-source-tag"
          >
            local
          </span>
        </div>
      </div>
      <div
        className="center-span-3-lines col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App B"
            type="button"
          >
            Install
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="row no-gutters"
    >
      <div
        className="center-span-3-lines col-auto mr-3"
      >
        <div
          className="core-app-icon"
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </div>
      </div>
      <div
        className="text-width col"
      >
        <div
          className="list-group-item-heading"
        >
          App C
        </div>
        <div
          className="list-group-item-text"
        >
          appC description
        </div>
        <div
          className="core-app-management-item-footer"
        >
          <span
            className="list-group-item-heading-source-tag"
          >
            local
          </span>
        </div>
      </div>
      <div
        className="center-span-3-lines col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App C"
            type="button"
          >
            Install
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`AppManagementView should render not-installed, installed, and upgradable apps sorted by name 1`] = `
Array [
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="row no-gutters"
    >
      <div
        className="center-span-3-lines col-auto mr-3"
      >
        <div
          className="core-app-icon"
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
          <div>
            <span
              className="alert-icon-bg"
            />
            <span
              className="mdi mdi-alert"
              title="The app does not specify which nRF Connect version(s) it supports"
            />
          </div>
        </div>
      </div>
      <div
        className="text-width col"
      >
        <div
          className="list-group-item-heading"
        >
          App A
        </div>
        <div
          className="list-group-item-text"
        >
          appA description
        </div>
        <div
          className="core-app-management-item-footer"
        >
          <span
            className="list-group-item-heading-source-tag"
          >
            local
            , v
            1.2.3
          </span>
        </div>
      </div>
      <div
        className="center-span-3-lines col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            title="Update App A"
            type="button"
          >
            Update
          </button>
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title="Open App A"
            type="button"
          >
            Open
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="row no-gutters"
    >
      <div
        className="center-span-3-lines col-auto mr-3"
      >
        <div
          className="core-app-icon"
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
          <div>
            <span
              className="alert-icon-bg"
            />
            <span
              className="mdi mdi-alert"
              title="The app does not specify which nRF Connect version(s) it supports"
            />
          </div>
        </div>
      </div>
      <div
        className="text-width col"
      >
        <div
          className="list-group-item-heading"
        >
          App C
        </div>
        <div
          className="list-group-item-text"
        >
          appC description
        </div>
        <div
          className="core-app-management-item-footer"
        >
          <span
            className="list-group-item-heading-source-tag"
          >
            local
            , v
            1.2.3
          </span>
        </div>
      </div>
      <div
        className="center-span-3-lines col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title="Open App C"
            type="button"
          >
            Open
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="row no-gutters"
    >
      <div
        className="center-span-3-lines col-auto mr-3"
      >
        <div
          className="core-app-icon"
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            style={
              Object {
                "visibility": "hidden",
              }
            }
          />
        </div>
      </div>
      <div
        className="text-width col"
      >
        <div
          className="list-group-item-heading"
        >
          App B
        </div>
        <div
          className="list-group-item-text"
        >
          appB description
        </div>
        <div
          className="core-app-management-item-footer"
        >
          <span
            className="list-group-item-heading-source-tag"
          >
            local
          </span>
        </div>
      </div>
      <div
        className="center-span-3-lines col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App B"
            type="button"
          >
            Install
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`AppManagementView should render without any apps 1`] = `null`;
